--- a/vanillaJS-programmers/src/css/mission3_index.css
+++ b/vanillaJS-programmers/src/css/mission3_index.css
@@ -1,18 +1,18 @@
 * { margin: 0; padding: 0; box-sizing: border-box; } 
-nav { height: 9vh; background-color: #4a4c88; } 
-ul > li { display: inline-block; padding: 0 5vw; } 
-li > a { line-height: 5vh; color: #fff; text-decoration: none; font-weight: bold; text-transform: uppercase; list-style: none; cursor: pointer; opacity: 0.7; } 
-li > a:hover { opacity: 1.0; } 
+ nav { height: 9vh; background-color: #4a4c88; } 
+ ul > li { display: inline-block; padding: 0 5vw; } 
+ li > a { line-height: 5vh; color: #fff; text-decoration: none; font-weight: bold; text-transform: uppercase; list-style: none; cursor: pointer; opacity: 0.7; } 
+ li > a:hover { opacity: 1.0; } 
  section { padding: 60px; } 
  section > h1 { margin-bottom: 20px; } 
 
  
  .app { /* 중앙정렬 */
- margin : 0 auto; max-width: 800px; min-height : 100vh; padding : 2rem; width : 100%; } 
+ margin : 0 auto; max-width: 800vw; min-height : 100vh; padding : 2rem; width : 100%; } 
  
  .search-keryword-wapper input { width : 100%; height : 2.5rem; padding : 10px; } 
  
- .search-result { width: 100%; display: grid; gap: 10px; grid-template-columns: repeat(4, calc(50% - 10rem)); } 
+ .search-result { width: 120vw; display: grid; gap: 1px; grid-template-columns: repeat(4, calc(50% - 10rem)); } 
  
  .gif-wrapper { padding : 1px; border: rgb(26, 26, 26) 1px solid; } 
  
